...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    tools:context=".ui.onboarding.OnboardingActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
...
            android:layout_marginTop="8dp"
            android:textColor="?attr/colorOnSurface"
            android:text="@string/onboarding_restore_backup" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/chips_scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        android:minHeight="48dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/setup_extras_container"
        app:layout_constraintStart_toStartOf="@id/title_text"
        app:layout_constraintEnd_toEndOf="@id/title_text"
        tools:visibility="visible">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/selection_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true" />
    </HorizontalScrollView>

    <com.google.android.material.textfield.TextInputLayout
...
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_apps_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingBottom="96dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_input_layout"
        tools:listitem="@layout/item_app_selectable_text" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/done"
        app:icon="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="parent"
...
